--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -4,5 +4,5 @@ Subject : <%= @blog.subject %><br>
 Description : <%= @blog.description %>
 </h3>
 <% if user_signed_in? %>
-<h5><%= link_to "Delete", blog_path(@blog), data: {turbo_method: :DELETE, turbo_confirm: "Are you sure?"} %></h5></center>
+<h5><%= link_to "Delete", blog_path(@blog), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %></h5></center>
 <% end %>
